generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("POSTGRES_PRISMA_URL")
  directUrl = env("POSTGRES_URL_NON_POOLING")
}

model Client {
  id                       Int                        @id @default(autoincrement())
  email                    String                     @unique
  password                 String
  name                     String
  contactNumber            Int
  address                  String
  postalCode               Int
  active                   Boolean                    @default(false)
  image                    String?
  activateClientToken      ActivateClientToken[]
  assignments              Assignment[]
  ClientNotification       ClientNotification[]
  passwordResetClientToken PasswordResetClientToken[]
  reviews                  Review[]                   @relation("ClientReviews")
  TutorNotification        TutorNotification[]
}

model Assignment {
  id                 Int                  @id @default(autoincrement())
  subject            String
  level              String
  clientId           Int
  tutorId            Int?
  additionalDetails  String?
  postDate           DateTime
  taken              Boolean
  address            String
  postalCode         Int
  minRate            Int
  maxRate            Int
  duration           String
  frequency          String
  typeOfTutor        String[]
  gender             String
  race               String[]
  availability       String
  coordinates        Decimal[]
  isPaid             Boolean              @default(false)
  startDate          String?
  amount             Int?
  isRequest          Boolean              @default(false)
  client             Client               @relation(fields: [clientId], references: [id])
  tutor              Tutor?               @relation("PrimaryTutor", fields: [tutorId], references: [id])
  ClientNotification ClientNotification[]
  TutorNotification  TutorNotification[]
  avail_tutors       Tutor[]              @relation("AvailableTutors")
}

model Tutor {
  id                      Int                       @id @default(autoincrement())
  email                   String                    @unique
  password                String
  name                    String
  contactNumber           Int
  dateOfBirth             DateTime
  gender                  String
  age                     Int
  nationality             String
  race                    String
  levelAndSubjects        Json
  location                String[]
  typeOfTutor             String
  yearsOfExperience       Int
  highestEducationLevel   String
  active                  Boolean                   @default(false)
  image                   String?
  introduction            String?
  summary                 String?
  studentsResults         String?
  activateTutorToken      ActivateTutorToken[]
  assignmentsPrimary      Assignment[]              @relation("PrimaryTutor")
  ClientNotification      ClientNotification[]
  passwordResetTutorToken PasswordResetTutorToken[]
  reviews                 Review[]                  @relation("TutorReviews")
  TutorNotification       TutorNotification[]
  assignmentsAvailable    Assignment[]              @relation("AvailableTutors")
}

model ClientNotification {
  id           Int         @id @default(autoincrement())
  read         Boolean     @default(false)
  clientId     Int
  date         DateTime    @default(now())
  assignmentId Int?
  tutorId      Int?
  type         String
  assignment   Assignment? @relation(fields: [assignmentId], references: [id])
  client       Client      @relation(fields: [clientId], references: [id])
  tutor        Tutor?      @relation(fields: [tutorId], references: [id])
}

model TutorNotification {
  id           Int         @id @default(autoincrement())
  read         Boolean     @default(false)
  tutorId      Int
  date         DateTime    @default(now())
  assignmentId Int?
  clientId     Int?
  type         String
  assignment   Assignment? @relation(fields: [assignmentId], references: [id])
  client       Client?     @relation(fields: [clientId], references: [id])
  tutor        Tutor       @relation(fields: [tutorId], references: [id])
}

model Review {
  id        Int      @id @default(autoincrement())
  tutorId   Int
  review    String
  rating    Int
  clientId  Int
  createdAt DateTime @default(now())
  client    Client   @relation("ClientReviews", fields: [clientId], references: [id], onDelete: Cascade)
  tutor     Tutor    @relation("TutorReviews", fields: [tutorId], references: [id], onDelete: Cascade)
}

model ActivateTutorToken {
  id          Int       @id @default(autoincrement())
  token       String    @unique
  createdAt   DateTime  @default(now())
  activatedAt DateTime?
  tutorId     Int
  tutor       Tutor     @relation(fields: [tutorId], references: [id])
}

model PasswordResetTutorToken {
  id        Int       @id @default(autoincrement())
  token     String    @unique
  createdAt DateTime  @default(now())
  resetAt   DateTime?
  tutorId   Int
  tutor     Tutor     @relation(fields: [tutorId], references: [id])
}

model ActivateClientToken {
  id          Int       @id @default(autoincrement())
  token       String    @unique
  createdAt   DateTime  @default(now())
  activatedAt DateTime?
  clientId    Int
  client      Client    @relation(fields: [clientId], references: [id])
}

model PasswordResetClientToken {
  id        Int       @id @default(autoincrement())
  token     String    @unique
  createdAt DateTime  @default(now())
  resetAt   DateTime?
  clientId  Int
  client    Client    @relation(fields: [clientId], references: [id])
}

generator dbml {
  provider = "prisma-dbml-generator"
}